force-app/main/default/objects/Property_Tax__c/Property_Tax__c.object-meta.xml
<CustomObject>
    <label>Property Tax</label>
    <nameField>
        <displayFormat>PTN-{00000000}</displayFormat>
        <label>Property Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Taxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>