force-app/main/default/objects/Property_Tax__c/fields/Accrue_Interest_From__c.field-meta.xml
<CustomField>
    <fullName>Accrue_Interest_From__c</fullName>
    <label>Accrue Interest From</label>
    <type>Date</type>
</CustomField>