force-app/main/default/objects/Property_Tax__c/fields/Acquisition_Month_Day__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Month_Day__c</fullName>
    <label>Acquisition Month/Day</label>
    <length>4</length>
    <type>Text</type>
</CustomField>