force-app/main/default/objects/Property_Tax__c/fields/Acquisition_Year__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Year__c</fullName>
    <label>Acquisition Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>