force-app/main/default/objects/Property_Tax__c/fields/Additional_Tax_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Tax_1__c</fullName>
    <label>Additional Tax 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>