force-app/main/default/objects/Property_Tax__c/fields/Administrative_Fee__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Fee__c</fullName>
    <label>Administrative Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>