force-app/main/default/objects/Property_Tax__c/fields/AP_Export_Date__c.field-meta.xml
<CustomField>
    <fullName>AP_Export_Date__c</fullName>
    <label>AP Export Date</label>
    <type>Date</type>
</CustomField>