force-app/main/default/objects/Property_Tax__c/fields/AP_Export_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>AP_Export_Date_Text__c</fullName>
    <label>AP Export Date Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>