force-app/main/default/objects/Property_Tax__c/fields/Approval_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_1__c</fullName>
    <label>Approval Date 1</label>
    <type>Date</type>
</CustomField>