force-app/main/default/objects/Property_Tax__c/fields/Approval_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_2__c</fullName>
    <label>Approval Date 2</label>
    <type>Date</type>
</CustomField>