force-app/main/default/objects/Property_Tax__c/fields/Approval_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_3__c</fullName>
    <label>Approval Date 3</label>
    <type>Date</type>
</CustomField>