force-app/main/default/objects/Property_Tax__c/fields/Assessed_Value__c.field-meta.xml
<CustomField>
    <fullName>Assessed_Value__c</fullName>
    <label>Assessed Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>