force-app/main/default/objects/Property_Tax__c/fields/Assessment_Date_BPP__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date_BPP__c</fullName>
    <label>Assessment Date BPP</label>
    <type>Date</type>
</CustomField>