force-app/main/default/objects/Property_Tax__c/fields/Assessment_Date_Real__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date_Real__c</fullName>
    <label>Assessment Date Real</label>
    <type>Date</type>
</CustomField>