force-app/main/default/objects/Property_Tax__c/fields/Assessment_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Ratio__c</fullName>
    <label>Assessment Ratio</label>
    <precision>17</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>