force-app/main/default/objects/Property_Tax__c/fields/Assessor_Account__c.field-meta.xml
<CustomField>
    <fullName>Assessor_Account__c</fullName>
    <label>Assessor Account</label>
    <length>40</length>
    <type>Text</type>
</CustomField>