force-app/main/default/objects/Property_Tax__c/fields/Assessor_Account_Tax_History__c.field-meta.xml
<CustomField>
    <fullName>Assessor_Account_Tax_History__c</fullName>
    <label>Assessor Account (Tax History) </label>
    <length>40</length>
    <type>Text</type>
</CustomField>