force-app/main/default/objects/Property_Tax__c/fields/Asset_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Asset_Address_2__c</fullName>
    <label>Asset Address 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>