force-app/main/default/objects/Property_Tax__c/fields/Asset_City__c.field-meta.xml
<CustomField>
    <fullName>Asset_City__c</fullName>
    <label>Asset City </label>
    <length>255</length>
    <type>Text</type>
</CustomField>