force-app/main/default/objects/Property_Tax__c/fields/Asset_User_Text_1__c.field-meta.xml
<CustomField>
    <fullName>Asset_User_Text_1__c</fullName>
    <label>Asset User Text 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>