force-app/main/default/objects/Property_Tax__c/fields/Asset_User_Text_3__c.field-meta.xml
<CustomField>
    <fullName>Asset_User_Text_3__c</fullName>
    <label>Asset User Text 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>