force-app/main/default/objects/Property_Tax__c/fields/AV_Reduction__c.field-meta.xml
<CustomField>
    <fullName>AV_Reduction__c</fullName>
    <label>AV Reduction $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>