force-app/main/default/objects/Property_Tax__c/fields/Bill_For__c.field-meta.xml
<CustomField>
    <fullName>Bill_For__c</fullName>
    <label>Bill For</label>
    <length>100</length>
    <type>Text</type>
</CustomField>