force-app/main/default/objects/Property_Tax__c/fields/Billing_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Billing_Jurisdiction__c</fullName>
    <label>Billing Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>