force-app/main/default/objects/Property_Tax__c/fields/Can_Export_To_AR__c.field-meta.xml
<CustomField>
    <fullName>Can_Export_To_AR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Export To AR</label>
    <type>Checkbox</type>
</CustomField>