force-app/main/default/objects/Property_Tax__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge</label>
    <referenceTo>cllease__Charge__c</referenceTo>
    <relationshipLabel>Property Taxes</relationshipLabel>
    <relationshipName>Property_Taxes</relationshipName>
    <type>Lookup</type>
</CustomField>