force-app/main/default/objects/Property_Tax__c/fields/Charge_Created__c.field-meta.xml
<CustomField>
    <fullName>Charge_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Created?</label>
    <type>Checkbox</type>
</CustomField>