force-app/main/default/objects/Property_Tax__c/fields/Check_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Paid_Date__c</fullName>
    <label>Check Paid Date</label>
    <type>Date</type>
</CustomField>