force-app/main/default/objects/Property_Tax__c/fields/Check_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Request_Number__c</fullName>
    <label>Check Request Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>