force-app/main/default/objects/Property_Tax__c/fields/Collector_Account__c.field-meta.xml
<CustomField>
    <fullName>Collector_Account__c</fullName>
    <label>Collector Account</label>
    <length>40</length>
    <type>Text</type>
</CustomField>