force-app/main/default/objects/Property_Tax__c/fields/Collector_Account_Tax_History__c.field-meta.xml
<CustomField>
    <fullName>Collector_Account_Tax_History__c</fullName>
    <label>Collector Account (Tax History)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>