force-app/main/default/objects/Property_Tax__c/fields/Collector_Payee__c.field-meta.xml
<CustomField>
    <fullName>Collector_Payee__c</fullName>
    <label>Collector/Payee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>