force-app/main/default/objects/Property_Tax__c/fields/Company_User_Text_1__c.field-meta.xml
<CustomField>
    <fullName>Company_User_Text_1__c</fullName>
    <label>Company User Text 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>