force-app/main/default/objects/Property_Tax__c/fields/Company_User_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Company_User_Text_2__c</fullName>
    <label>Company User Text 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>