force-app/main/default/objects/Property_Tax__c/fields/Contract_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Contract_Equipment__c</fullName>
    <label>Contract Equipment</label>
    <referenceTo>cllease__Contract_Equipment__c</referenceTo>
    <relationshipLabel>Property Taxes</relationshipLabel>
    <relationshipName>Property_Taxes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>