force-app/main/default/objects/Property_Tax__c/fields/Created_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Formatted__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Formatted</label>
    <type>Date</type>
</CustomField>