force-app/main/default/objects/Property_Tax__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <length>30</length>
    <type>Text</type>
</CustomField>