force-app/main/default/objects/Property_Tax__c/fields/Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Enterprise__c</fullName>
    <label>Enterprise</label>
    <length>30</length>
    <type>Text</type>
</CustomField>