force-app/main/default/objects/Property_Tax__c/fields/Equalization_Rate__c.field-meta.xml
<CustomField>
    <fullName>Equalization_Rate__c</fullName>
    <label>Equalization Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>