force-app/main/default/objects/Property_Tax__c/fields/Exported_To_AR_Date__c.field-meta.xml
<CustomField>
    <fullName>Exported_To_AR_Date__c</fullName>
    <label>Exported To AR Date</label>
    <type>Date</type>
</CustomField>