force-app/main/default/objects/Property_Tax__c/fields/Exported_To_AR_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Exported_To_AR_Date_Text__c</fullName>
    <label>Exported To AR Date Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>