force-app/main/default/objects/Property_Tax__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee</label>
    <referenceTo>cllease__Fee__c</referenceTo>
    <relationshipLabel>Property Taxes</relationshipLabel>
    <relationshipName>Property_Taxes</relationshipName>
    <type>Lookup</type>
</CustomField>