force-app/main/default/objects/Property_Tax__c/fields/Installment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Installment_Due_Date__c</fullName>
    <label>Installment Due Date</label>
    <type>Date</type>
</CustomField>