force-app/main/default/objects/Property_Tax__c/fields/Installment_Due_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Installment_Due_Date_Text__c</fullName>
    <label>Installment Due Date Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>