force-app/main/default/objects/Property_Tax__c/fields/Installment_Mail_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Installment_Mail_By_Date__c</fullName>
    <label>Installment Mail By Date</label>
    <type>Date</type>
</CustomField>