force-app/main/default/objects/Property_Tax__c/fields/Installment_Mail_By_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Installment_Mail_By_Date_Text__c</fullName>
    <label>Installment Mail By Date Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>