force-app/main/default/objects/Property_Tax__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <label>Inventory #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>