force-app/main/default/objects/Property_Tax__c/fields/Inventory_Category__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Category__c</fullName>
    <label>Inventory Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>