force-app/main/default/objects/Property_Tax__c/fields/Inventory_Class__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Class__c</fullName>
    <label>Inventory Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>