force-app/main/default/objects/Property_Tax__c/fields/Is_Alternate_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Is_Alternate_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Alternate Vendor</label>
    <type>Checkbox</type>
</CustomField>