force-app/main/default/objects/Property_Tax__c/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <label>Last Modified By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>