force-app/main/default/objects/Property_Tax__c/fields/Lease_End_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Lease_End_Date_Text__c</fullName>
    <label>Lease End Date Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>