force-app/main/default/objects/Property_Tax__c/fields/Lease_Number__c.field-meta.xml
<CustomField>
    <fullName>Lease_Number__c</fullName>
    <label>Lease Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>