force-app/main/default/objects/Property_Tax__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>