force-app/main/default/objects/Property_Tax__c/fields/Lessee_Lessor_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Lessor_Address_1__c</fullName>
    <label>Lessee/Lessor Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>