force-app/main/default/objects/Property_Tax__c/fields/Lessee_Lessor_Code__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Lessor_Code__c</fullName>
    <label>Lessee/Lessor Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>