force-app/main/default/objects/Property_Tax__c/fields/Lessee_Lessor_Company__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Lessor_Company__c</fullName>
    <label>Lessee/Lessor Company</label>
    <length>40</length>
    <type>Text</type>
</CustomField>