force-app/main/default/objects/Property_Tax__c/fields/Lessee_Lessor_Name__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Lessor_Name__c</fullName>
    <label>Lessee/Lessor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>