force-app/main/default/objects/Property_Tax__c/fields/Lessee_Lessor_State__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Lessor_State__c</fullName>
    <label>Lessee/Lessor State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>