force-app/main/default/objects/Property_Tax__c/fields/Lessee_Lessor_Zip__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Lessor_Zip__c</fullName>
    <label>Lessee/Lessor Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>