force-app/main/default/objects/Property_Tax__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <label>Locked</label>
    <length>3</length>
    <type>Text</type>
</CustomField>