force-app/main/default/objects/Property_Tax__c/fields/Miscellaneous_Amount__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Amount__c</fullName>
    <label>Miscellaneous Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>