force-app/main/default/objects/Property_Tax__c/fields/MV_Reduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>MV_Reduction_Amount__c</fullName>
    <label>MV Reduction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>