force-app/main/default/objects/Property_Tax__c/fields/Owner_Class__c.field-meta.xml
<CustomField>
    <fullName>Owner_Class__c</fullName>
    <label>Owner Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>