force-app/main/default/objects/Property_Tax__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <formula>Charge__r.cllease__Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid to Govt</label>
    <type>Checkbox</type>
</CustomField>