force-app/main/default/objects/Property_Tax__c/fields/Parcel_Number__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Number__c</fullName>
    <label>Parcel Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>