force-app/main/default/objects/Property_Tax__c/fields/PPT_Subject_To_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>PPT_Subject_To_Sales_Tax__c</fullName>
    <label>PPT Subject To Sales Tax</label>
    <length>3</length>
    <type>Text</type>
</CustomField>