force-app/main/default/objects/Property_Tax__c/fields/Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Processed_By__c</fullName>
    <label>Processed By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>