force-app/main/default/objects/Property_Tax__c/fields/Processed_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date_Text__c</fullName>
    <label>Processed Date Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>