force-app/main/default/objects/Property_Tax__c/fields/Property_Class__c.field-meta.xml
<CustomField>
    <fullName>Property_Class__c</fullName>
    <label>Property Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>