force-app/main/default/objects/Property_Tax__c/fields/Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date__c</fullName>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>