force-app/main/default/objects/Property_Tax__c/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <label>Receipt Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>