force-app/main/default/objects/Property_Tax__c/fields/Reported_Cost__c.field-meta.xml
<CustomField>
    <fullName>Reported_Cost__c</fullName>
    <label>Reported Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>