force-app/main/default/objects/Property_Tax__c/fields/RP_Class__c.field-meta.xml
<CustomField>
    <fullName>RP_Class__c</fullName>
    <label>RP Class</label>
    <length>12</length>
    <type>Text</type>
</CustomField>