force-app/main/default/objects/Property_Tax__c/fields/Sales_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Rate__c</fullName>
    <label>Sales Tax Rate</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>