force-app/main/default/objects/Property_Tax__c/fields/Serial_Number_VIN__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_VIN__c</fullName>
    <label>Serial Number/VIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>