force-app/main/default/objects/Property_Tax__c/fields/Site_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_1__c</fullName>
    <label>Site Address 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>