force-app/main/default/objects/Property_Tax__c/fields/Site_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Code__c</fullName>
    <label>Site Code</label>
    <length>35</length>
    <type>Text</type>
</CustomField>