force-app/main/default/objects/Property_Tax__c/fields/Site_County__c.field-meta.xml
<CustomField>
    <fullName>Site_County__c</fullName>
    <label>Site County</label>
    <length>30</length>
    <type>Text</type>
</CustomField>