force-app/main/default/objects/Property_Tax__c/fields/Site_Zip__c.field-meta.xml
<CustomField>
    <fullName>Site_Zip__c</fullName>
    <label>Site Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>