force-app/main/default/objects/Property_Tax__c/fields/Special_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Special_Assessment__c</fullName>
    <label>Special Assessment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>