force-app/main/default/objects/Property_Tax__c/fields/Tax_Account__c.field-meta.xml
<CustomField>
    <fullName>Tax_Account__c</fullName>
    <label>Tax Account</label>
    <length>70</length>
    <type>Text</type>
</CustomField>