force-app/main/default/objects/Property_Tax__c/fields/Tax_Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Tax_Account_Description__c</fullName>
    <label>Tax Account Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>