force-app/main/default/objects/Property_Tax__c/fields/Tax_Bill_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bill_Approver_1__c</fullName>
    <label>Tax Bill Approver 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>