force-app/main/default/objects/Property_Tax__c/fields/Tax_Bill_Available_for_Check_Request__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bill_Available_for_Check_Request__c</fullName>
    <label>Tax Bill Available for Check Request</label>
    <length>3</length>
    <type>Text</type>
</CustomField>