force-app/main/default/objects/Property_Tax__c/fields/Tax_Bill_Exported_To_AR_By__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bill_Exported_To_AR_By__c</fullName>
    <label>Tax Bill Exported To AR By</label>
    <length>60</length>
    <type>Text</type>
</CustomField>