force-app/main/default/objects/Property_Tax__c/fields/Tax_Bill_Exported_To_AR_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bill_Exported_To_AR_Date__c</fullName>
    <label>Tax Bill Exported To AR Date</label>
    <type>Date</type>
</CustomField>