force-app/main/default/objects/Property_Tax__c/fields/Tax_Bill_Has_Final_Approval__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bill_Has_Final_Approval__c</fullName>
    <label>Tax Bill Has Final Approval</label>
    <length>3</length>
    <type>Text</type>
</CustomField>