force-app/main/default/objects/Property_Tax__c/fields/Tax_Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bill_Number__c</fullName>
    <label>Tax Bill Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>