force-app/main/default/objects/Property_Tax__c/fields/Tax_Bill_User_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bill_User_Text_2__c</fullName>
    <label>Tax Bill User Text 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>