force-app/main/default/objects/Property_Tax__c/fields/Tax_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Tax_Reduction__c</fullName>
    <label>Tax Reduction $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>