force-app/main/default/objects/Property_Tax__c/fields/Tax_Return_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Return_Code__c</fullName>
    <label>Tax Return Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>