force-app/main/default/objects/Property_Tax__c/fields/Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_Year__c</fullName>
    <label>Tax Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>