force-app/main/default/objects/Property_Tax__c/fields/User_City_Code_Site__c.field-meta.xml
<CustomField>
    <fullName>User_City_Code_Site__c</fullName>
    <label>User City Code (Site) </label>
    <length>10</length>
    <type>Text</type>
</CustomField>