force-app/main/default/objects/Property_Tax__c/fields/User_County_Code_Site__c.field-meta.xml
<CustomField>
    <fullName>User_County_Code_Site__c</fullName>
    <label>User County Code (Site)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>