force-app/main/default/objects/Property_Tax__c/fields/User_State_Code__c.field-meta.xml
<CustomField>
    <fullName>User_State_Code__c</fullName>
    <label>User State Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>