force-app/main/default/objects/Property_Tax__c/fields/Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Code__c</fullName>
    <label>Vendor Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>